Modal; Reset password modal implemented; Same as sign in and sign up. Toggles app state showResetPasswordModal true and false; when showAuthModal and showResetPasswordModal are true, reset password  shows. Goes back and forth between sign in. Fixed blurriness of modal by adding   -webkit-transform: translate3d(0,0,0); in .modal style.

--- a/style/style.css
+++ b/style/style.css
@@ -1197,6 +1197,9 @@ form {
   width:100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
+  /* https://github.com/mgcrea/angular-strap/issues/1234 */
+  /* fixed blurriness */
+  -webkit-transform: translate3d(0,0,0);
 }
 
 .modal-main {
@@ -1208,6 +1211,7 @@ form {
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);
+  /* transform: translate(-50.1%, -50.1%); */
   border-radius: 10px;
 }
 
@@ -1231,13 +1235,14 @@ form {
   font-size: 30px;
   border: 0;
   color: gray;
+  background-color: white;
 }
 
 .signup-btn {
   background-color: white;
   color: blue;
   border-color: gray;
-  margin: 20px 0 0 15px;
+  /* margin: 20px 0 0 15px; */
 }
 
 .signin-btn {
@@ -1247,7 +1252,8 @@ form {
 .goto-signin-link {
   color: blue;
   padding: 10px;
-  font-size: 17px;
+  font-size: 14px;
+  margin-right: 20px;
 }
 .goto-signin-link:hover {
   color: gray;
@@ -1255,8 +1261,25 @@ form {
 }
 
 .post-signup-message {
-  margin: 100px 50px 0 50px;
+  margin: 100px 50px 30px 50px;
   font-size: 17px;
+}
+
+.auth-modal-title {
+  color: gray;
+}
+/* IN PROGRESS */
+.in-progress {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.reset-password-btn {
+  margin-bottom: 0;
 }
 
 @media screen and (min-width: 800px) {
